# parafoil

./: .gitignore  CMakeLists.txt  CNAME  README.md  database.m  de.cpp  dynamicprogramming.cpp  dynamics.cpp  index.html  main.cpp  nsgii.cpp  ode45.cpp  parafoil.ixx  parafoil_ode.m  try_bb_parafoil.m
